<resources>
    <string name="app_name">layoutnene</string>
    <string name="agenda">Agenda</string>
    <string name="login">Login</string>
    <string name="criar_conta">Criar conta</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="criar_conta">Criar conta</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="email">Email</string>
    <string name="nome">Nome</string>
</resources>
